# rust-crypto-example

./: Cargo.toml  readme.md
src/: lib.rs  secret.rs
tests/: const_time_test.rs  rand_test.rs  secret_test.rs
