[package]
name = "rust-crypto-example"
version = "0.1.0"
authors = ["Jiewen Yao <jiewen.yao@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeroize = "1.3.0"
zeroize_derive = "1.1.0"
secrecy = "0.7.0"

ring = "0.16.20"
rand = "0.8.3"
rdrand = "0.8.0"

constant_time_eq = "0.1.5"
